# CloseCrab-Unified

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CloseCrab.bat  CloseCrab.command  CloseCrab问题.txt  LICENSE  MARKETING.md  README.md  README.zh-CN.md  TestAPI.txt  USER_GUIDE.md  USER_GUIDE_EN.md  build.bat  download_model.bat  extract_claude_headers.bat  installer.iss  run.bat  vcpkg.json
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
build-test/: CMakeCache.txt
config/: config.yaml  config.yaml.example
docs/: CI_CD_GUIDE.md  CloseCrab-Unified_融资BP.pptx  CloseCrab-Unified_融资BP_v2.pptx  ROADMAP.md  Resume_CarlLouis_v2_EN.docx  Resume_CarlLouis_v3_EN.docx  architecture.md  claude-code-comparison-2026-05-27.md  codepilot-integration-plan.md  comparison.md  cost-optimization-plan-2026-05-29.md  feature-gap.md  fix-plan-2026-05-27.md  fix-plan-2026-05-29-v2.md  fix-plan-2026-05-29-v3.1.md  fix-plan-2026-05-29-v3.md  integration-plan-v2.md  integration-plan.md  jackproai-comparison-2026-05-29.md  subagent-timeout-fix-plan.md  user-guide.md  孔双泉简历_v2.docx  孔双泉简历_v3.docx
docs/file-read-enhancement/: C++特有问题_FileReadTool对齐报告_2026-06-05.md  实施完成报告_FileReadTool全面对齐_2026-06-05.md  对齐实现进度_2026-06-06.md  对齐状态实测表_2026-06-06.md  异步IO详细分析_风险收益_2026-06-05.md  快速开始指南_FileReadTool对齐_2026-06-05.md
extensions/jetbrains/: README.md  build.gradle.kts
extensions/mobile-web/: README.md  index.html  manifest.json  tunnel.py
extensions/sublime/: CloseCrab.py  CloseCrab.sublime-commands  Default.sublime-keymap  README.md
extensions/vim/: README.md
extensions/vim/autoload/: closecrab.vim
extensions/vim/plugin/: closecrab.vim
extensions/visualstudio/: CloseCrab.sln  README.md
extensions/visualstudio/CloseCrab/: ChatToolWindow.cs  CloseCrab.csproj  CloseCrabClient.cs  CloseCrabPackage.cs  source.extension.vsixmanifest
extensions/vscode/: README.md  closecrab-0.5.0.vsix  package-lock.json  package.json  tsconfig.json
extensions/vscode/src/: extension.ts
installer/: closecrab.iss
scripts/: build-graph.bat  build-linux.sh  build-macos.sh  install-macos.sh  setup-codebase-memory.ps1  setup-ripgrep.ps1  uninstall.bat  uninstall.sh
src/: main.cpp
src/agents/: AgentManager.cpp  AgentManager.h
src/api/: APIClient.h  APIError.h  LocalLLMClient.cpp  LocalLLMClient.h  OpenAICompatClient.cpp  OpenAICompatClient.h  RemoteAPIClient.cpp  RemoteAPIClient.h  StreamParser.cpp  StreamParser.h
src/bridge/: BridgeClient.cpp  BridgeClient.h  BridgeTransport.h  JWTUtils.h
src/commands/: AdvancedCommands.h  Command.h  CommandRegistry.cpp  CommandRegistry.h  ExtendedCommands.h  GitCommands.h  SessionCommands.h
src/config/: Config.cpp  SettingsManager.cpp  SettingsManager.h
src/coordinator/: Coordinator.h
src/core/: AppState.h  AssistantMode.h  AutoCompactStrategy.h  BudgetTracker.h  CompactStrategy.h  ContextCollapse.cpp  ContextCollapse.h  ContextCollapseStrategy.h  CostTracker.h  EnhancedSnipStrategy.h  ErrorRecovery.h  FileStateCache.h  HistoryCompactor.h  Message.cpp  Message.h  MessageSnip.cpp  MessageSnip.h  MicroCompactStrategy.h  MmapCache.h  PermissionManager.h  PolicyLimits.h  PredictiveEngine.h  QueryEngine.cpp  QueryEngine.h  ReactiveCompactStrategy.h  SessionManager.cpp  SessionManager.h  SessionRouter.cpp  SessionRouter.h  TokenEstimator.h  TranscriptStore.h
src/git/: GitManager.h  GitTracker.h
src/hooks/: HookManager.h
src/knowledge/: SharedKnowledge.cpp  SharedKnowledge.h
src/license/: LicenseCore.cpp  LicenseCore.h  LicenseGate.cpp  LicenseGate.h  tweetnacl_glue.c
src/llm/: LLMEngine.cpp  LLMEngine.h
src/lsp/: LSPClient.cpp  LSPClient.h  LSPServerManager.h
src/mcp/: MCPClient.cpp  MCPClient.h  MCPElicitationHandler.h  MCPOAuth.h  MCPRegistry.h  MCPTransport.cpp  MCPTransport.h
src/memory/: FileMemoryManager.h  MemoryExtractor.h  MemorySystem.cpp  SessionSearch.h
src/network/: HttpServer.cpp  MobileWebSocket.h  RemoteSession.h  SSEServer.cpp  SSEServer.h  WebSocketServer.cpp
src/permissions/: BashClassifier.h  PermissionEngine.cpp  PermissionEngine.h  PermissionPersistence.h
src/plugins/: PluginManager.h
src/rag/: EmbeddingEngine.h
src/security/: ProcessSandbox.h  Sandbox.cpp  Sandbox.h
src/services/: AgentProgress.h  AgentSummary.h  AgentSummaryService.h  Analytics.h  AnalyticsService.h  AutoDreamService.h  AwaySummaryService.h  CompactSummary.h  DeepLink.h  FeatureFlags.h  FileChangeTracker.h  FileWatcher.h  MagicDocs.h  MagicDocsService.h  ModelRouter.h  NotifierService.h  PreventSleepService.h  ProjectDetector.h  PromptSuggestion.h  PromptSuggestionService.h  RateLimitMessages.h  SessionAutoSave.h  SessionTranscriptService.h  SettingsSync.h  SkillSearchService.h  TeamMemorySync.h  Tips.h  TokenEstimationService.h  UpdateChecker.h
src/ssd/: SSDExpertStreamer.cpp  SSDExpertStreamer.h
src/stats/: StatsEngine.cpp  StatsEngine.h
src/tools/: OutputPersistence.h  StreamingToolExecutor.h  Tool.h  ToolRegistry.cpp  ToolRegistry.h
src/tools/AgentTool/: AgentTool.h
src/tools/AskUserQuestionTool/: AskUserQuestionTool.h
src/tools/BashTool/: BashTool.h
src/tools/ComputerUseTool/: ComputerUseTool.h
src/tools/ConfigTool/: ConfigTool.h
src/tools/CronTools/: CronTools.h
src/tools/DebuggerTool/: DebuggerTool.h
src/tools/DiscoverSkillsTool/: DiscoverSkillsTool.h
src/tools/ExtraTools/: ExtraTools.h
src/tools/GlobTool/: GlobTool.h
src/ui/: Buddy.h  CompactWarning.h  ConsoleInputGuard.h  CtrlBHandler.h  KeyboardSelector.h  MarkdownRenderer.h  MultilineInput.h  OutputCollapse.h  PosixTty.h  TabComplete.h  TerminalUI.h  VimMode.h
src/utils/: DiffRender.h  FileSecurityUtils.h  ImageUtils.cpp  ImageUtils.h  ImageUtils_Enhanced.h  NotebookUtils.h  PathValidation.h  PdfUtils.h  PdfUtils_Enhanced.h  ProcessRunner.h  ProxyConfig.h  ShellQuoting.h  StringUtils.h  SyntaxHighlight.h  Trace.h  UUID.h
src/voice/: VoiceEngine.h
tests/: browser_test.js  package-lock.json  package.json  stress_test.js  test_core.cpp  test_integration.cpp  test_tools_extended.cpp
(+40 files in other folders)
